# wireguard-rs

./: Cargo.toml
src/: lib.rs
src/configuration/: config.rs
src/configuration/uapi/: set.rs
src/platform/: tun.rs
src/platform/linux/: udp.rs
src/wireguard/: peer.rs  wireguard.rs
src/wireguard/handshake/: device.rs
src/wireguard/router/: types.rs
src/wireguard/router/tests/: bench.rs
